--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -1,7 +1,6 @@
-name: Python tests # Name shown in GitHub Actions UI
+name: Python tests / CI # Name shown in GitHub Actions UI
 
 on:
-  # Trigger the workflow on push or pull request events but only for the "dev" and "main" branches
   push:
     branches: [dev, main]
   pull_request:
@@ -9,24 +8,40 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest # Use the latest Ubuntu runner
+    runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.11", "3.12"]
 
     steps:
-      # Check out the repository code
       - uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
-          
-      # Install project dependencies
+          python-version: ${{ matrix.python-version }}
+          cache: pip
+
+      - name: Upgrade pip
+        run: python -m pip install -U pip
+
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install -r requirements.txt
-      
-      # Run pytest to execute the tests, CI will fail if any test fails
-      - name: Run pytest
+          pip install -U ruff pip-audit
+
+      - name: Lint (ruff)
         run: |
-          pytest
+          ruff check .
+          ruff format --check .
+
+      - name: Run tests
+        run: pytest -q
+
+      - name: Dependency sanity (pip check)
+        run: python -m pip check
+
+      - name: Dependency audit (pip-audit)
+        run: pip-audit
